# Drug-Detection-Chatbot

./: .gitignore  pyproject.toml
app/backend/: main.py  user_db.json
app/backend/infra/: db.py
app/backend/models/: schemas.py
app/backend/routers/: chat.py  pill.py  user.py
app/backend/services/: detect.py  extract.py  judge.py  ocr.py  search.py  vision.py
app/docs/: api-contract.md
app/frontend/: Chat.py  Home.py  UserInfo.py  main.py
app/frontend/pages/: Chat.py  Home.py  UserInfo.py
app/frontend/utils/: api.py  state.py
data_collection/: 01_crowling_drug_data.ipynb
data_preprocessed/: 01_preprocessed.ipynb  압축풀기_폴더이동.ipynb
modeling/YOLO/yolo11m/: 01_yolo11m_baseeline.ipynb
modeling/YOLO/yolo11n/: 01_yolo11n_baseline.ipynb  02_yolo11n_drugdata_baseline.ipynb  03_yolo11n_pretrained.ipynb
modeling/llm/: 01_openai_llm_baseline.ipynb
modeling/llm/01_llm_extraction/: 01_02.main.py  01_02_main.ipynb  01_02_varco.ipynb  01_02_varco_최종.ipynb  01_03_llava.ipynb  01_04_gemma3.ipynb  01_05_gpt.ipynb  01_baseline.ipynb  drugocr.py  llm_01_02.py
modeling/llm/02_llm_judgment/: 01_openai_llm_baseline.ipynb
modeling/llm/02_llm_search/: 01_openai_llm_baseline.ipynb
modeling/llm/03_llm_judgment/: 01_openai_llm_baseline.ipynb
modeling/ocr/: 01_TrOCR.ipynb  01_easyocr_baseline.ipynb  01_paddleocr_최종.ipynb
modeling/segment/: 00_load_dataset.ipynb  01_fastsam_segment_baseline.ipynb  02_yolo11n_detection_baseline.ipynb  03_yolo11n_detection_preprocessed.ipynb  fastsam_segment.py  yolo_detect_crop.py
utils/: __init__.py  driver.py  image_util.py  llm_openai.py
utils/mk_datastructure/: 01_flatten.py  02_convert_json_to_csv.py  03_EDA_preprocess.ipynb
