[project]
name = "project-sep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "jupyter>=1.1.1",
    "koreanize-matplotlib>=0.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
    "roboflow>=1.2.9",
    "seaborn>=0.13.2",
    "selenium>=4.35.0",
    "typing>=3.10.0.0",
    "ultralytics>=8.3.199",
    "undetected-chromedriver>=3.5.5",
    "uvicorn>=0.35.0",
]
