[project]
name = "drug-detection-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "easyocr>=1.7.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "openai>=1.107.3",
    "openpyxl>=3.1.5",
    "paddleocr>=3.2.0",
    "paddlepaddle>=3.2.0",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "rapidfuzz>=3.14.1",
    "roboflow>=1.2.9",
    "selenium>=4.35.0",
    "transformers>=4.56.1",
    "ultralytics>=8.3.198",
    "undetected-chromedriver>=3.5.5",
    "numpy>=1.19.5",
    "streamlit>=1.49.1",
    "fastapi>=0.117.1",
    "uvicorn>=0.36.0",
    "pydantic>=2.11.9",
    "python-multipart>=0.0.20",
]
