[project]
name = "drug-detection-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "easyocr>=1.7.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "openai>=1.107.3",
    "openpyxl>=3.1.5",
    "paddleocr>=3.2.0",
    "paddlepaddle>=3.2.0",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "rapidfuzz>=3.14.1",
    "roboflow>=1.2.9",
    "selenium>=4.35.0",
    "transformers>=4.56.1",
    "ultralytics>=8.3.198",
    "undetected-chromedriver>=3.5.5",
    "dotenv>=0.9.9",
    "ollama>=0.5.4",
    "bitsandbytes>=0.47.0",
    "accelerate>=1.10.1",
]
